# randfacts

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  attribution.txt  main.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_duplicates.yml  codeql-analysis.yml  main.yml  python-test.yml
randfacts/: __init__.py  __main__.py  __version__.py  main.py  randfacts.py  safe.txt  unsafe.txt
src/randfacts/: __init__.py  __main__.py  randfacts.py  safe.txt  unsafe.txt
tests/: checkduplicates.py  fix_encoding.py  test.py  test_cli.py  test_general.py
tests/checkduplicates/: Cargo.toml
tests/checkduplicates/src/: main.rs  structures.rs  util.rs
tests/wagfisch/: Cargo.toml
tests/wagfisch/src/: main.rs
