[project]
name = "randfacts"
version = "0.24.0"
description = "Package to generate random facts"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "TabulateJarl8", email = "tabulatejarl8@gmail.com" }]
requires-python = ">=3.6"
dependencies = [
  "dataclasses>=0.8 ; python_full_version == '3.6.*'",
  "importlib-metadata>=4.8.3 ; python_full_version < '3.8'",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://tabulate.tech/software/randfacts/"
repository = "https://github.com/TabulateJarl8/randfacts"

[project.scripts]
randfacts = "randfacts.__main__:cli_entrypoint"

[tool.uv.build-backend]
source-include = ["src/randfacts/*.txt"]

[dependency-groups]
dev = [
  "ruff~=0.7.4 ; python_full_version >= '3.7' and python_full_version < '3.9'",
  "ruff>=0.14.14 ; python_full_version >= '3.9'",
  "pytest>=9.0.2 ; python_full_version >= '3.10'",
  "pytest~=8.3.3 ; python_full_version >= '3.8' and python_full_version < '3.10'",
  "pytest~=6.2.0 ; python_full_version >= '3.6' and python_full_version < '3.8'",
  "pytest-cov>=7.0.0 ; python_full_version >= '3.9'",
  "pytest-cov~=5.0.0 ; python_full_version == '3.8.*'",
  "pytest-cov~=4.0.0 ; python_full_version >= '3.6' and python_full_version < '3.8'",
  "mypy>=1.19.1 ; python_full_version >= '3.9'",
  "mypy~=1.14.0 ; python_full_version == '3.8.*'",
  "mypy~=1.4.0 ; python_full_version == '3.7.*'",
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  # yells at you if you use a bool typed function argument
  "FBT001",
  "FBT002",
  # copyright at top of file
  "CPY",
  # complains about random.choice() not being good for cryptography
  "S311",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "ANN001",
  "ANN002",
  "PLC2701",
  "ARG002",
  "PLR2004",
  "DOC",
  "INP001",
  "S",
]
"src/randfacts/__main__.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
order-by-type = true

[tool.coverage.run]
omit = ["randfacts/__main__.py"]

# legacy import: ignore types
[tool.mypy]
[[tool.mypy.overrides]]
module = "importlib_metadata.*"
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
