[package]
name = "checkduplicates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.8"
pyo3 = "0.16.5"
project-root = "0.2.2"
itertools = "0.10.3"
indicatif = "0.16.2"
num-integer = "0.1.45"
